# DeckMaster

./: .editorconfig  .env.example  .gitignore  Cargo.toml  Justfile  README.md  package.json
.cargo/: config.toml
.github/workflows/: cd.yaml  release.yml
dev/: Dockerfile  docker-compose.yml
docker/: Dockerfile
src/client/: package.json  tsconfig.json
src/client/src/: index.d.ts  index.ts
src/client/src/modules/: MTG.ts
src/domain/: Cargo.toml
src/domain/src/: lib.rs
src/domain/src/mtg/: model.rs  service.rs
src/server/: Cargo.toml  package.json  wrangler.toml
src/server/src/: lib.rs  main.rs  services.rs
src/server/src/helpers/: mod.rs  to_sql_query.rs
src/server/src/modules/mtg/: repository.rs
src/server/src/router/: mod.rs
src/server/src/router/api/: mod.rs
src/server/src/router/api/v0/: mod.rs
src/server/src/router/api/v0/mtg/: mod.rs  retrieve_cards.rs  retrieve_decks.rs  retrieve_image.rs
src/server/src/utils/: worker.rs
src/ui/: package.json
src/ui/src/: App.tsx
