[workspace]
members = [
    "src/domain",
    "src/server",
]

default-members = [
    "src/server"
]

resolver = "2"

[workspace.package]
edition = "2024"
version = "0.0.0"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.7"
chrono = "0.4"
futures-util = "0.3"
serde = "1.0"
serde_json = "1.0"
tokio = "1.42"
tracing = "0.1"
tracing-subscriber = "0.3"
turso = "0.1"
uuid = "1"

deckmaster-domain = { path = "src/domain" }
