[workspace]
members = [
    "src/domain",
    "src/server",
]

default-members = [
    "src/server"
]

resolver = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[workspace.package]
edition = "2024"
version = "0.0.0"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8",  default-features = false }
chrono = { version = "0.4", default-features = false }
console_error_panic_hook = "0.1"
csv = "1.3"
futures-util = "0.3"
serde = "1.0"
serde_json = "1.0"
tower-http = "0.6"
tower-service = "0.3.2"
uuid = "1"
worker = "0.6"

deckmaster-domain = { path = "src/domain" }
