[package]
name = "deckmaster-server"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.release]
release = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["json", "query"] }
chrono = { workspace = true, features = ["serde"] }
console_error_panic_hook = { workspace = true }
csv = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tower-service = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
uuid = { workspace = true, features = ["js", "serde", "v4"] }
worker = { workspace = true }

deckmaster-domain = { workspace = true }
