[package]
name = "deckmaster-server"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["chrono", "runtime-tokio", "sqlite", "tls-none", "uuid"] }
reqwest = { workspace = true, features = ["rustls-tls"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
turso = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
uuid = { workspace = true, features = ["serde", "v4"] }

deckmaster-domain = { workspace = true }
